--- a/src/pages/myModal.css
+++ b/src/pages/myModal.css
@@ -9,7 +9,7 @@
 }
 body {
   background-color: black;
-  font-family: 'Metal Mania', cursive;
+  /* font-family: 'Metal Mania', cursive; */
   /* font-family: 'Rubik Wet Paint', cursive; */
   /* overflow: hidden; */
 }
