--- a/src/components/preloader/Preloader.css
+++ b/src/components/preloader/Preloader.css
@@ -153,3 +153,12 @@ body {
       transform: rotate(0deg);
     }
   }
+
+
+    .yfooter {
+      /* position: absolute; */
+      left: 0;
+      width: 100%;
+      bottom: 0;
+      right: 0;
+    }
