--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: rgb(103, 30, 7);
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar-track {
