changes on homepage

--- a/src/Home/apli.css
+++ b/src/Home/apli.css
@@ -198,7 +198,7 @@
 /* text effect */
 .textcheck h1 {
     font-size: 4em;
-    color: #0ec1f2;
+    color: #f2620e;
     font-family: 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
     /* -apple-system, BlinkMacSystemFont, Roboto, Oxygen, Ubuntu, Cantarell,*/
     font-weight: 600;
@@ -206,7 +206,8 @@
     margin-left: auto;
     margin-right: auto;
     /* margin-bottom: 20px; */
-    text-shadow: 0 1px 3px rgb(3, 114, 249);
+    /* text-shadow: 0 1px 3px rgb(38, 0, 0); */
+        text-shadow: 2px 2px 8px #c37004;
 }
 
 .shop-title::after {
@@ -214,11 +215,11 @@
     display: block;
     width: 100%;
     height: 0;
-    border: 5px solid rgb(7, 138, 237);
+    border: 5px solid rgb(226, 161, 55);
     border-top: 20px solid transparent;
     border-left: 20px solid transparent;
     border-right: 20px solid transparent;
-    filter: drop-shadow(0 -8px 20px rgb(114, 217, 240));
+    filter: drop-shadow(0 -8px 20px rgb(241, 205, 96));
 }
 
 .textcheck {
